versioned_docs/version-4.0/client-api/operations/compare-exchange/delete-compare-exchange-value.mdx
---
title: "Compare Exchange: How to Delete Compare Exchange Value"
hide_table_of_contents: true
sidebar_label: Delete Compare Exchange
sidebar_position: 2
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Compare Exchange: How to Delete Compare Exchange Value
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="">

* Use `DeleteCompareExchangeValueOperation` to delete a _Key_ and its _Value_.  

* The _Key_ and its _Value_ are deleted only if the _index_ in the request matches the current index stored in the server for the specified key.  

* For an overview of the 'Compare Exchange' feature click: [Compare Exchange Overview](../../../client-api/operations/compare-exchange/overview.mdx)

* In this page:  
  * [Syntax](../../../client-api/operations/compare-exchange/get-compare-exchange-values.mdx#syntax)  
  * [Example](../../../client-api/operations/compare-exchange/delete-compare-exchange-value.mdx#example)  
</Admonition>
## Syntax

**Method**:
<TabItem value="delete_0" label="delete_0">
<CodeBlock language="csharp">
{`public DeleteCompareExchangeValueOperation(string key, long index)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **key** | string | The key to be deleted |
| **index** | long |  The version number of the value to be deleted |

**Returned object**:
<TabItem value="compare_exchange_result" label="compare_exchange_result">
<CodeBlock language="csharp">
{`public class CompareExchangeResult<T>
\{
    public bool Successful;
    public T Value;
    public long Index;
\}
`}
</CodeBlock>
</TabItem>

| Return Value | | |
| ------------- | ----- | ---- |
| **Successful** | bool | * _True_ if the delete operation was successfully completed
 * _True_ if _key_ doesn't exist
 * _False_ if the delete operation failed |  
| **Value** | `T` | * The value that was deleted upon a successful delete
* 'null' if _key_ doesn't exist
* The currently existing value on the server if delete operation failed |  
| **Index** | long | * The next available version number upon success
* The next available version number if _key_ doesn't exist
* The currently existing index on the server if the delete operation failed |  


## Example

<TabItem value="delete_1" label="delete_1">
<CodeBlock language="csharp">
{`// First, get existing value
CompareExchangeValue<User> readResult =
    store.Operations.Send(
        new GetCompareExchangeValueOperation<User>("AdminUser"));

// Delete the key - use the index received from the 'Get' operation
CompareExchangeResult<User> deleteResult
    = store.Operations.Send(
        new DeleteCompareExchangeValueOperation<User>("AdminUser", readResult.Index));

// The delete result is successful only if the index has not changed between the read and delete operations
bool deleteResultSuccessful = deleteResult.Successful;
`}
</CodeBlock>
</TabItem>  



</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="">

* Use `DeleteCompareExchangeValueOperation` to delete a _Key_ and its _Value_.  

* The _Key_ and its _Value_ are deleted only if the _index_ in the request matches the current index stored in the server for the specified key.  

* For an overview of the 'Compare Exchange' feature click: [Compare Exchange Overview](../../../client-api/operations/compare-exchange/overview.mdx)

* In this page:  
  * [Syntax](../../../client-api/operations/compare-exchange/get-compare-exchange-values.mdx#syntax)  
  * [Example](../../../client-api/operations/compare-exchange/delete-compare-exchange-value.mdx#example)  
</Admonition>
## Syntax

**Method**:
<TabItem value="delete_0" label="delete_0">
<CodeBlock language="java">
{`public DeleteCompareExchangeValueOperation(Class<T> clazz, String key, long index)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **key** | String | The key to be deleted |
| **index** | long |  The version number of the value to be deleted |

**Returned object**:
<TabItem value="compare_exchange_result" label="compare_exchange_result">
<CodeBlock language="java">
{`public class CompareExchangeResult<T> \{
    private T value;
    private long index;
    private boolean successful;

    public T getValue() \{
        return value;
    \}

    public void setValue(T value) \{
        this.value = value;
    \}

    public long getIndex() \{
        return index;
    \}

    public void setIndex(long index) \{
        this.index = index;
    \}

    public boolean isSuccessful() \{
        return successful;
    \}

    public void setSuccessful(boolean successful) \{
        this.successful = successful;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Return Value | | |
| ------------- | ----- | ---- |
| **Successful** | boolean | * _True_ if the delete operation was successfully completed
 * _True_ if _key_ doesn't exist
 * _False_ if the delete operation failed |  
| **Value** | `T` | * The value that was deleted upon a successful delete
* 'null' if _key_ doesn't exist
* The currently existing value on the server if delete operation failed |  
| **Index** | long | * The next available version number upon success
* The next available version number if _key_ doesn't exist
* The currently existing index on the server if the delete operation failed |  


## Example

<TabItem value="delete_1" label="delete_1">
<CodeBlock language="java">
{`// First, get existing value
CompareExchangeValue<User> readResult
    = store.operations().send(
        new GetCompareExchangeValueOperation<>(User.class, "AdminUser"));

// Delete the key - use the index received from the 'Get' operation
CompareExchangeResult<User> deleteResult
    = store.operations().send(
        new DeleteCompareExchangeValueOperation<>(User.class, "AdminUser", readResult.getIndex()));

// The delete result is successful only if the index has not changed between the read and delete operations
boolean deleteResultSuccessful = deleteResult.isSuccessful();
`}
</CodeBlock>
</TabItem>  



</LanguageContent>

<!---
### Compare Exchange
- [Overview](../../../client-api/operations/compare-exchange/overview)
- [Get a Compare-Exchange Value](../../../client-api/operations/compare-exchange/get-compare-exchange-value)
- [Get Compare-Exchange Values](../../../client-api/operations/compare-exchange/get-compare-exchange-values)
- [Put a Compare-Exchange Value](../../../client-api/operations/compare-exchange/delete-compare-exchange-value)


-->